# tpt-eidos

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  spec.txt
.github/workflows/: ci.yml
crates/eidos-cli/: Cargo.toml  README.md
crates/eidos-cli/src/: main.rs
crates/eidos-cli/tests/: cli.rs
crates/eidos-codegen/: Cargo.toml  README.md
crates/eidos-codegen/src/: lib.rs
crates/eidos-erasure/: Cargo.toml  README.md
crates/eidos-erasure/src/: lib.rs
crates/eidos-flight-math/: Cargo.toml  README.md
crates/eidos-flight-math/src/: lib.rs  primitives.eidos  prover.rs
crates/eidos-kernel/: Cargo.toml  README.md
crates/eidos-kernel/src/: lib.rs
crates/eidos-parser/: Cargo.toml  README.md
crates/eidos-parser/src/: ast.rs  grammar.ebnf  lib.rs
crates/eidos-parser/tests/: fuzz.rs
crates/eidos-tests/: Cargo.toml
crates/eidos-tests/tests/: integration.rs
crates/eidos-verifier/: Cargo.toml  README.md
crates/eidos-verifier/src/: lib.rs
crates/eidos-verifier/tests/: fuzz.rs
examples/: array_size_mismatch.eidos  attitude_control.eidos  calibrate_gyro.eidos  calibrate_gyro_broken.eidos  effects_example.eidos  flight_math_broken.eidos  recursive_nonterminating.eidos
