[workspace]
resolver = "2"
members = [
    "crates/eidos-verifier",
    "crates/eidos-parser",
    "crates/eidos-kernel",
    "crates/eidos-cli",
    "crates/eidos-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.74"

[workspace.dependencies]
eidos-verifier = { path = "crates/eidos-verifier" }
eidos-parser = { path = "crates/eidos-parser" }
eidos-kernel = { path = "crates/eidos-kernel" }

[profile.release]
opt-level = 3
lto = true
