[package]
name = "eidos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line entry point for tpt-eidos (eidos check / eidos build)"

[[bin]]
name = "eidos"
path = "src/main.rs"

[dependencies]
eidos-parser.workspace = true
eidos-kernel.workspace = true
eidos-erasure.workspace = true
eidos-codegen.workspace = true
