[package]
name = "tpt-eidos-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Lowers the erased eidos computational core to a no_std Rust crate"

[dependencies]
tpt-eidos-erasure.workspace = true
tpt-eidos-parser.workspace = true
