[package]
name = "eidos-flight-math"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pre-proved flight-control domain library for tpt-eidos (Phase 3)"
publish = false

[dependencies]
eidos-kernel.workspace = true
eidos-parser.workspace = true
eidos-verifier.workspace = true

[dev-dependencies]
eidos-erasure.workspace = true
eidos-codegen.workspace = true
