[package]
name = "tpt-eidos-flight-math"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Pre-proved flight-control domain library for tpt-eidos (Phase 3)"

[dependencies]
tpt-eidos-kernel.workspace = true
tpt-eidos-parser.workspace = true
tpt-eidos-verifier.workspace = true

[dev-dependencies]
tpt-eidos-erasure.workspace = true
tpt-eidos-codegen.workspace = true
