[package]
name = "tpt-eidos-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Transparent QF_LRA decision procedure (Fourier-Motzkin) for tpt-eidos"

[dependencies]
